# sonar-python

./: Dockerfile  README.md  compose.yml  main.py  pyproject.toml
